# test2

./: .gitignore  settings.gradle
medialibrary/: CMakeLists.txt  build.gradle
medialibrary/src/androidTest/java/com/kjs/medialibrary/: ExampleInstrumentedTest.java
medialibrary/src/cpp/: native-lib.cpp
medialibrary/src/main/: AndroidManifest.xml
medialibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
medialibrary/src/main/cpp/include/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h
medialibrary/src/main/cpp/include/doc/: config.texi
medialibrary/src/main/cpp/include/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc
medialibrary/src/main/cpp/include/ffbuild/: config.fate  config.mak  config.sh
medialibrary/src/main/cpp/include/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aaccoder.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacpsy.d  aacsbr_fixed.d  aasc.d  ac3.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  adx.d  adx_parser.d  adxdec.d  adxenc.d  agm.d  aic.d  alac.d  alacenc.d  aliaspixdec.d  aliaspixenc.d  (+571 more)
medialibrary/src/main/cpp/include/libavcodec/arm/: fmtconvert_init_arm.d  hevcdsp_init_arm.d  hevcdsp_init_neon.d  mlpdsp_init_arm.d  mpegvideo_arm.d  mpegvideo_armv5te.d  mpegvideoencdsp_init_arm.d  rv34dsp_init_arm.d  rv40dsp_init_arm.d  sbcdsp_init_arm.d
medialibrary/src/main/cpp/include/libavcodec/neon/: mpegvideo.d
medialibrary/src/main/cpp/include/libavdevice/: alldevices.d  avdevice.d  fbdev_common.d  fbdev_dec.d  fbdev_enc.d  lavfi.d  utils.d  v4l2-common.d  v4l2.d  v4l2enc.d
medialibrary/src/main/cpp/include/libavfilter/: aeval.d  af_acontrast.d  af_acopy.d  af_acrossover.d  af_acrusher.d  af_adeclick.d  af_adelay.d  af_aderivative.d  af_aecho.d  af_aemphasis.d  af_afade.d  af_afftdn.d  af_afftfilt.d  af_afir.d  af_aformat.d  af_agate.d  af_aiir.d  af_alimiter.d  af_amerge.d  af_amix.d  af_amultiply.d  af_anequalizer.d  af_anlmdn.d  af_anlms.d  af_anull.d  af_apad.d  af_aphaser.d  af_apulsator.d  af_aresample.d  af_arnndn.d  af_asetnsamples.d  af_asetrate.d  af_ashowinfo.d  af_asoftclip.d  af_astats.d  af_asubboost.d  af_atempo.d  af_axcorrelate.d  af_biquads.d  af_channelmap.d  (+243 more)
medialibrary/src/main/cpp/include/libavfilter/dnn/: dnn_backend_native.d  dnn_backend_native_layer_conv2d.d  dnn_backend_native_layer_depth2space.d  dnn_backend_native_layer_mathbinary.d  dnn_backend_native_layer_mathunary.d  dnn_backend_native_layer_maximum.d  dnn_backend_native_layer_pad.d  dnn_backend_native_layers.d  dnn_interface.d
medialibrary/src/main/cpp/include/libavformat/: a64.d  adtsenc.d  aiffenc.d  apngenc.d  asfenc.d  assenc.d  astenc.d  au.d  cafenc.d  crcenc.d  dash.d  dashenc.d  daudenc.d  dvenc.d  ffmetaenc.d  fifo.d  fifo_test.d  filmstripenc.d  fitsenc.d  flacenc.d  flacenc_header.d  flvenc.d  framecrcenc.d  framehash.d  gif.d  gxfenc.d  hashenc.d  hdsenc.d  hlsenc.d  hlsplaylist.d  icoenc.d  id3v2enc.d  idroqenc.d  img2enc.d  ircamenc.d  ivfenc.d  jacosubenc.d  latmenc.d  libavformat.pc  lrcenc.d  (+55 more)
medialibrary/src/main/cpp/include/libavutil/: libavutil.pc  libavutil.so.56
medialibrary/src/main/cpp/include/libswresample/: libswresample.pc  libswresample.so.3
medialibrary/src/main/cpp/include/libswscale/: libswscale.pc  libswscale.so.5
medialibrary/src/main/java/com/kjs/medialibrary/: BaseEncoder.java  LogMedia.java  TimeOutUtil.java  tips
medialibrary/src/main/java/com/kjs/medialibrary/nactive/: FFMPEGManager.java  NativeFFMPEG.java
medialibrary/src/main/java/com/kjs/medialibrary/sound/: AudioFileUtils.java  AudioRecorder.java  tips
medialibrary/src/main/java/com/kjs/medialibrary/sound/encoder/: AACEncoder.java  AACEncoder2.java  ACCEncoder2.java  AMREncoder.java  BaseAudioEncoder.java  MP3Encoder.java  OggEncoder.java  WAVEncoder.java  tips
medialibrary/src/main/java/com/kjs/medialibrary/sound/utils/: AudioAlgorithmUtil.java  AudioFileUtils.java  BytesTransUtil.java  (+1 more)
medialibrary/src/main/java/com/kjs/medialibrary/video/: CameraPreview.java  CameraUtil.java  VideoFileUtil.java  VideoRecorder.java  tips
medialibrary/src/test/java/com/kjs/medialibrary/: ExampleUnitTest.java
mp3library/: CMakeLists.txt  build.gradle
mp3library/src/androidTest/java/com/kjs/mp3library/: ExampleInstrumentedTest.kt
mp3library/src/main/: AndroidManifest.xml
mp3library/src/main/cpp/: native-lib.cpp
mp3library/src/main/cpp/extra/: util.h
mp3library/src/main/java/com/kjs/mp3library/: LibMp3lameUtil.java
mp3library/src/test/java/com/kjs/mp3library/: ExampleUnitTest.kt
(+44 files in other folders)
